test/should_pass/empty_002.grg
actions empty_002;

rule empty_2 {
	pattern {
		;
	}
	replace {
		;
	}
}

