test/should_fail/inh_004.grg
actions inh_004 using inh_model_004;

rule bla { pattern{} replace{} }
